Trading api-first migration
