# restful-af-sv/src/main/java/org/example/restful/adapter/rest/v1/converter/PurchaseBatchRequestToCreateOperationDtoConverter.java
@@ -3,7 +3,7 @@ package org.example.restful.adapter.rest.v1.converter;
 import org.example.restful.domain.OperationType;
 import org.example.restful.domain.OrderType;
 import org.example.restful.domain.dtos.CreateOperationDto;
-import org.example.restful.port.rest.v1.api.model.PurchaseBatchRequest;
+import org.openapitools.model.PurchaseBatchRequest;
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.stereotype.Component;
 
@@ -19,7 +19,7 @@ public class PurchaseBatchRequestToCreateOperationDtoConverter
       return CreateOperationDto.builder()
           .amount(request.getAmount())
           .limitedPrize(request.getLimitedPrize())
-          .orderType(OrderType.valueOf(request.getOrderType().name()))
+          .orderType(OrderType.valueOf(request.getOrderType()))
           .operationType(OperationType.BUY)
           .build();
     }
